File sending and receiving pages have been added, along with the ability to download emails in PDF format.  12:03  28.02.2026

--- a/NotikaEmail_Identity/NotikaEmail_Identity.csproj
+++ b/NotikaEmail_Identity/NotikaEmail_Identity.csproj
@@ -21,6 +21,12 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.12" />
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
+    <PackageReference Include="PagedList.Core.Mvc" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\attachments\" />
+    <Folder Include="wwwroot\UserImagess\" />
   </ItemGroup>
 
 </Project>
