--- a/NotikaEmail_Identity/NotikaEmail_Identity.csproj
+++ b/NotikaEmail_Identity/NotikaEmail_Identity.csproj
@@ -22,6 +22,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.12" />
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
     <PackageReference Include="PagedList.Core.Mvc" Version="3.0.0" />
+    <PackageReference Include="Seq.Api" Version="2025.2.2" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
